# APO

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  main.cpp  main.qml  toolchain-mingw.cmake
.github/workflows/: build-windows.yml  cmake-multi-platform.yml
src/: ImageProcessor.cpp  ImageProcessor.h  ImageProcessor.hpp  ImageProcessorTest.cpp  histogramWidget.cpp  histogramWidget.hpp  imageLabel.hpp  imageProcessor.cpp  imageProcessor.hpp  imageWrapper.cpp  imageWrapper.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  mdiChild.cpp  mdiChild.hpp  tab.cpp  tab.h  tab.hpp
src/UI/: ATImageViewer.cpp  ATImageViewer.hpp  ImageViewer.cpp  ImageViewer.hpp  histogramWidget.cpp  histogramWidget.hpp  imageLabel.cpp  imageLabel.hpp  mainwindow.cpp  mainwindow.hpp  mdiChild.cpp  mdiChild.hpp  parametersDialog.cpp  parametersDialog.hpp  rangeStretchDialog.cpp  rangeStretchDialog.hpp
src/UI/dialogs/: DialogBuilder.cpp  DialogBuilder.hpp  MaskEditor.cpp  MaskEditor.hpp  utils.cpp  utils.hpp
tests/: imageProcessorTests.cpp  imageWrapperTest.cpp
